--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <!--activity code input-->
     <string name="app_name">Sample</string>
     <string name="action_settings">Settings</string>
-    <string name="enter_code">Enter Code:</string>
+    <string name="enter_code">To enter a classroom, please enter the classroom code by typing in the code or scanning the QR code.</string>
     <string name="or">OR</string>
     <string name="scan_code">Scan Code</string>
     <string name="code">mystudent12345</string>
